--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ install:
     - pip3 install flask
     - pip3 install sqlalchemy
     - pip3 install flask_sqlalchemy
+    - pip install flask_sqlalchemy
+    - pip install flask -f lib
 
 before_script:
     - uname -a
