--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,15 @@ before_install:
     - pip install --upgrade pip
 
 install:
+    - pip3 install .
+    - pip install .
     - pip install autopep8
     - pip install coverage
     - pip install numpy
     - pip install pylint
-    - pip3 install flask
-    - pip3 install sqlalchemy
-    - pip3 install flask_sqlalchemy
+    - pip3 install --user flask
+    - pip3 install --user sqlalchemy
+    - pip3 install --user flask_sqlalchemy
 
 before_script:
     - uname -a
