--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ install:
     - pip install coverage
     - pip install numpy
     - pip install pylint
-    - pip3 install flask
-    - pip3 install sqlalchemy
-    - pip3 install flask_sqlalchemy
+    - pip3 install flask -f lib
+    - pip3 install sqlalchemy -f lib
+    - pip3 install flask_sqlalchemy -f lib
 
 before_script:
     - uname -a
