--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ install:
     - pip install coverage
     - pip install numpy
     - pip install pylint
-    - pip install flask 
-    - pip install sqlalchemy 
-    - pip install flask_sqlalchemy 
+    - pip3 install flask 
+    - pip3 install sqlalchemy 
+    - pip3 install flask_sqlalchemy 
 
 before_script:
     - uname -a
