--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 language: python
 
 python:
-   - "3.5"
+   - "2.7"
 
 before_install:
     - pip install --upgrade pip
@@ -13,9 +13,10 @@ install:
     - pip install coverage
     - pip install numpy
     - pip install pylint
-    - pip3 install flask 
-    - pip3 install sqlalchemy 
-    - pip3 install flask_sqlalchemy 
+    - pip install flask
+    - pip install flask-restful 
+    - pip install sqlalchemy 
+    - pip install flask_sqlalchemy 
 
 before_script:
     - uname -a
