--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ before_install:
     - pip install --upgrade pip
 
 install:
+    - pip install flask
+    - pip install flask_sqlalchemy
+    - pip install psycopg2
     - pip install autopep8
     - pip install coverage
     - pip install numpy
