--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,17 @@ before_install:
 
 install:
     - pip install flask
+    - pip install -t lib flask
+    - python3 -m pip install flask
+    - python3 -m pip install lib flask
     - pip install flask_sqlalchemy
+    - pip install -t lib flask_sqlalchemy
+    - python3 -m pip install flask_sqlalchemy
+    - python3 -m pip install lib flask_sqlalchemy
     - pip install psycopg2
+    - pip install -t lib psycopg2
+    - python3 -m pip install psycopg2
+    - python3 -m pip install lib psycopg2
     - pip install autopep8
     - pip install coverage
     - pip install numpy
