--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ before_install:
     - pip install --upgrade pip
 
 install:
+    - pip install -r app/requirements.txt
+    - pip install -t lib -r app/requirements.txt
+    - python3 -m pip install -r app/requirements.txt
+    - python3 -m pip install lib -r app/requirements.txt
     - pip install flask
     - pip install -t lib flask
     - python3 -m pip install flask
