--- a/app/app.yaml
+++ b/app/app.yaml
@@ -1,9 +1,9 @@
-runtime: python27
-#env: flex
-#entrypoint: gunicorn -b :$PORT main:app
+runtime: python
+env: flex
+entrypoint: gunicorn -b :$PORT main:app
 
-#runtime_config: 
-#  python_version: 3.5
+runtime_config: 
+  python_version: 3.5
 
 beta_settings:
     cloud_sql_instances: tutorial-project-161522:us-central1:magicinstance
@@ -13,3 +13,4 @@ handlers:
   static_dir: static
 - url: /.*
   script: main.app
+
