--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ install:
     - pip install numpy
     - pip install pylint
     - pip install Jinja2
+    - pip install flask
+    - pip install flask-restful
+    - pip install flask-sqlalchemy
 
 before_script:
     - uname -a
